tests/bonsai/error/option-dereference2.bonsai
func use_option(v : option[i32]) -> i32 {
    return v;
}
